# chatgpt-use

./: Cargo.toml  README.md  SKILL.md  WORKPROBE.txt  install.sh
.github/workflows/: release-binaries.yml
docs/: architecture.html  mcp-setup.html
examples/: work-nightly.plist
src/: channel.rs  cli.rs  delegation.rs  ledger.rs  main.rs  oauth.rs  protocol.rs  tools.rs
src/cmd/: ask.rs  handoff.rs  init.rs  mcp.rs  mod.rs  refresh.rs  run.rs  serve.rs  work.rs
